refactor API layer
